# Nemix-aiogram-template

./: pyproject.toml  requirements.txt
migrations/versions/: e03a9dbe38a6_init.py
src/: configuration.py
src/bot/: __main__.py  dispatcher.py
src/bot/filters/: admin.py  moderator.py  register.py  register_filter.py
src/bot/handlers/: admin.py  start.py
src/bot/middlewares/: middleware_db.py
src/bot/structures/: data_structure.py
src/bot/structures/keyboards/: main_menu.py
src/bot/structures/lexicon/: lexicon_ru.py
src/db/: database.py
src/db/models/: user.py
src/db/repositories/: abstract.py  user.py
