[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Vasiliynemix <vasyanemix@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nemix_aiogram_template"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
alembic = {extras = ["asyncio"], version = "^1.12.0"}
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
redis = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
